# whitenoise

./: CHANGELOG.md  Cargo.toml
.github/workflows/: auto-issue-project.yml  ci.yml
crates/whitenoise-macros/: Cargo.toml
crates/whitenoise-macros/src/: lib.rs
db_migrations/: 0034_add_archived_at_to_accounts_groups.sql  0035_add_content_normalized.sql
src/: lib.rs  perf.rs
src/cli/: dispatch.rs  protocol.rs
src/cli/commands/: chats.rs  debug.rs  groups.rs  keys.rs  media.rs  messages.rs  mod.rs
src/integration_tests/benchmarks/: mod.rs  perf_layer.rs  registry.rs
src/integration_tests/benchmarks/core/: benchmark_result.rs  benchmark_scenario.rs
src/integration_tests/benchmarks/scenarios/: user_search.rs
src/integration_tests/scenarios/: account_management.rs  advanced_messaging.rs  chat_media_upload.rs  message_streaming.rs
src/integration_tests/test_cases/account_management/: mod.rs  verify_new_identity_synced.rs
src/integration_tests/test_cases/user_search/: mod.rs  search_fallback_seed.rs  seeds.rs
src/integration_tests/test_cases/user_search/seeds/: jeff_contacts.json  jeff_metadata.json  max_metadata.json
src/nostr_manager/: mod.rs
src/relay_control/: account_inbox.rs  discovery.rs  ephemeral.rs  ephemeral_executor.rs  groups.rs  mod.rs  observability.rs  router.rs
src/relay_control/sessions/: notifications.rs  session.rs
src/whitenoise/: accounts_groups.rs  chat_list.rs  debug.rs  error.rs  event_tracker.rs  follows.rs  group_information.rs  groups.rs  key_packages.rs  media_files.rs  messages.rs  mod.rs  relays.rs  users.rs  zapstore.rs
src/whitenoise/accounts/: login.rs  mod.rs  setup.rs
src/whitenoise/chat_list_streaming/: manager.rs  types.rs
src/whitenoise/database/: account_settings.rs  accounts.rs  accounts_groups.rs  aggregated_messages.rs  app_settings.rs  cached_graph_users.rs  content_search.rs  drafts.rs  group_information.rs  media_files.rs  mod.rs  processed_events.rs  published_events.rs  published_key_packages.rs  relay_events.rs  relay_status.rs  relays.rs  users.rs  utils.rs
src/whitenoise/event_processor/: account_event_processor.rs  global_event_processor.rs  mod.rs
src/whitenoise/event_processor/event_handlers/: handle_contact_list.rs  handle_giftwrap.rs  handle_metadata.rs  handle_mls_message.rs  handle_relay_list.rs
src/whitenoise/groups/: media.rs  publish.rs
src/whitenoise/message_aggregator/: mod.rs  processor.rs  types.rs
src/whitenoise/notification_streaming/: mod.rs
src/whitenoise/scheduled_tasks/tasks/: cached_graph_user_cleanup.rs  consumed_key_package_cleanup.rs  key_package_maintenance.rs
src/whitenoise/user_search/: graph.rs  mod.rs
src/whitenoise/users/: key_package.rs  relay_sync.rs
tests/: cli_e2e.rs  cli_relay_control_e2e.rs
