[workspace]
members = [".", "crates/whitenoise-macros"]

[package]
name = "whitenoise"
version = "0.2.1"
description = "A secure messenger built on MLS and Nostr"
authors = ["White Noise Authors"]
edition = "2024"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whitenoise"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
blurhash = "0.2.3"
chacha20poly1305 = "0.10"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"], optional = true }
dashmap = "6.1"
hex = "0.4"
image = "0.25"
indexmap = { version = "2", features = ["serde"] }
infer = "0.19"
keyring-core = "0.7"
lightning-invoice = "0.33.1"

mdk-core = { version = "0.7.1", git = "https://github.com/marmot-protocol/mdk", rev = "ca0663ee332958aa92efadf916d19c6e1b1f99c7", features = [
    "mip04",
] }
mdk-sqlite-storage = { version = "0.7.1", git = "https://github.com/marmot-protocol/mdk", rev = "ca0663ee332958aa92efadf916d19c6e1b1f99c7" }
mdk-storage-traits = { version = "0.7.1", git = "https://github.com/marmot-protocol/mdk", rev = "ca0663ee332958aa92efadf916d19c6e1b1f99c7" }

nwc = "0.44"
nostr-blossom = "0.44"
nostr-sdk = { version = "0.44", features = [
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }

# LOCAL MDK FOR DEVELOPMENT
# mdk-core = { version = "0.7.1", path="../mdk/crates/mdk-core" }
# mdk-sqlite-storage = { version = "0.7.1", path="../mdk/crates/mdk-sqlite-storage" }

# LOCAL RUST_NOSTR FOR DEVELOPMENT
# nwc = { version = "0.43", path="../rust-nostr/crates/nwc" }
# nostr-blossom = { version = "0.43", path="../rust-nostr/rfs/nostr-blossom" }
# nostr-sdk = { version = "0.43", path="../rust-nostr/crates/nostr-sdk", features = [
#     "lmdb",
#     "nip04",
#     "nip44",
#     "nip47",
#     "nip59",
# ] }

rand = "0.9"
reqwest = { version = "0.13.1", features = [
    "multipart",
    "json",
    "stream",
    "rustls-no-provider",
], default-features = false }
# Explicit TLS provider: reqwest 0.13 defaults to aws-lc-rs, but we use ring for
# compatibility with nostr-blossom (which uses reqwest 0.12 with ring). Having both
# providers enabled causes a runtime panic, so we use rustls-no-provider above and
# explicitly select ring here.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
    "derive",
    "json",
] }
thiserror = "2.0.12"
unicode-normalization = "0.1"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64ct = "=1.7.3"
dotenvy = "0.15"
whitenoise-macros = { path = "crates/whitenoise-macros" }
tempfile = "3.19.1"
dirs = { version = "6", optional = true }
rpassword = { version = "7", optional = true }
indicatif = { version = "0.18.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# keychain: used on x86_64 (non-provisioned command-line/dev builds).
# protected: used on aarch64 (Apple Silicon) where the Flutter app is always
#   code-signed by a provisioning profile.  The protected::Store symbol is only
#   compiled when this feature is enabled, so both features must be listed even
#   though a given binary only calls one of them.
# NOTE: apple_native_keyring_store::protected::Store requires the binary to be
#   code-signed with a provisioning profile. The `cli` feature automatically
#   selects keychain::Store instead, so CLI builds work without signing.
apple-native-keyring-store = { version = "0.2", features = ["keychain", "protected"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5"

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1.44", features = ["test-util"] }

[features]
default = []
cli = ["clap", "dirs", "rpassword"]
integration-tests = ["clap"]
benchmark-tests = ["integration-tests", "indicatif"]

[[bin]]
name = "wnd"
path = "src/bin/wnd.rs"
required-features = ["cli"]

[[bin]]
name = "wn"
path = "src/bin/wn.rs"
required-features = ["cli"]

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"
required-features = ["integration-tests"]

[[bin]]
name = "benchmark_test"
path = "src/bin/benchmark_test.rs"
required-features = ["benchmark-tests"]

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
strip = true
